Prevent duplicate appeal records (#186)
* Prevent duplicate appeal records

Before creating an appeal, added a check to see if an appeal for the company number/reference exists. If there are duplicates the first record is updated with the current date/time and the reason passed in updated.
Add new test for updating an appeal
Updated some of the logging calls to use the penalty reference as the context.

BI-11981

* PR updates

Make variable final
Sort out indentation
Change HashMap to LinkedHashMap

BI-11981

* PR fixes

Updated for formatting by adding GoogleStyles .
Removed the test that checks for a list of appeals as this PR is to stop that happening.
Added a test to check for an exception when saving an appeal