@@ -8,6 +8,7 @@ import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.status;
 
 import java.io.File;
+import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
 
@@ -77,7 +78,7 @@ class AppealControllerGetTest {
     @Test
     void whenAppealExistsByPenalty_return200() throws Exception {
 
-        when(appealService.getAppealsByPenaltyReference(any(String.class))).thenReturn(List.of(getValidOtherAppeal()));
+    	when(appealService.getAppealsByPenaltyReference(any(String.class), any(String.class))).thenReturn(List.of(getValidOtherAppeal()));
 
         final String validAppeal = asJsonArray();
 
@@ -91,7 +92,7 @@ class AppealControllerGetTest {
     @Test
     void whenAppealDoesNotExistByPenalty_return404() throws Exception {
 
-        when(appealService.getAppealsByPenaltyReference(any(String.class))).thenReturn(List.of());
+        when(appealService.getAppealsByPenaltyReference(any(String.class), any(String.class))).thenReturn(Collections.emptyList());
 
         mockMvc.perform(get(APPEALS_URI, TEST_COMPANY_ID)
             .queryParam("penaltyReference", TEST_PENALTY_ID)
